tests/ui/expected-ident.stderr
error: unexpected token, expected an identifier
 --> tests/ui/expected-ident.rs:3:15
  |
3 | #[efg(unix || "false")]
  |               ^^^^^^^
