tests/ui/expected-ident.rs
use efg::efg;

#[efg(unix || "false")]
struct S;

fn main() {}
